# JamesTadleyGreen.github.io

./: .gitignore  BLOG.sqlite3  README.md  about.md  contact.md  haskell-blog.cabal  index.html  package.yaml  posts.md  readme.md  site.hs  yesod-demo.cabal
Site/: Compiler.hs  Context.hs  Git.hs  Snippet.hs
app/: DevelMain.hs
code/advent_of_code_2023/: 1-day-1.hs  2-day-2.hs
code/code_golf/: 2-fibonacci.md
code/haskell-programming-from-first-principles/: 12-chapter.hs  8-chapter.hs  9-chapter.hs
code/hyper_log_log/: 1-probabilistic-counting.hs
config/: client_session_key.aes  keter.yml  models.persistentmodels  routes.yesodroutes  settings.yml
css/: default.css  index.css  post.css  toc.css  variables.css
docs/: about.html  contact.html  index.html  posts.html
docs/css/: JetBrains-Mono.css  default.css  index.css  post.css  toc.css  variables.css
docs/js/: index.js
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  cf2-viewer.html  dev-workflow.html
docs/tags/: AOC.html  (+36 more)
js/: index.js
markdown/: test.md
posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.md  2015-11-28-carpe-diem.md  2015-12-07-tu-quoque.md  cf2-viewer.md  dev-workflow.md
src/: Application.hs  Foundation.hs  Settings.hs
templates/: 404.hamlet  code.html  cv.hamlet  cv.lucius  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  default.html  header.html  home.hamlet  home.lucius  multi-post.html  post.html  toc.html
yesod-demo/: .gitignore
yesod-devel/: rebuild
(+113 files in other folders)
