name:               haskell-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.19.*
                  , filepath == 1.4.*
                  , blaze-html == 0.9.1.*
                  , containers == 0.6.*
                  , pandoc-types == 1.*
                  , text == 2.0.2
                  , split == 0.2.4
                  , process == 1.6.*
                  , directory == 1.3.8.*
  other-modules:    Site.Git
                  , Site.Context
                  , Site.Snippet
                  , Site.Compiler
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
